MDEV-5505: Assertion `! is_set()' fails on PREPARE SELECT with out of range in GROUP BY

Fixed error processing in find_order_in_list(): if an error reported to user there is no sens to continue.